Start removing ExternalizableOp